--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "http://tomasz.janczuk.org",
     "twitter": "tjanczuk"
   },
-  "version": "6.6.4",
+  "version": "6.6.5",
   "description": "Edge.js: run .NET and Node.js in-process on Windows, Mac OS, and Linux",
   "tags": [
     "owin",
@@ -36,13 +36,13 @@
     "mocha": "3.2.0",
     "mocha-junit-reporter": "^1.13.0"
   },
-  "homepage": "https://github.com/agracio/edge",
+  "homepage": "https://github.com/agracio/edge-js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:agracio/edge.git"
+    "url": "git@github.com:agracio/edge-js.git"
   },
   "bugs": {
-    "url": "http://github.com/agracio/edge/issues"
+    "url": "http://github.com/agracio/edge-js/issues"
   },
   "scripts": {
     "install": "node tools/install.js",
