--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ environment:
     - nodejs_version: "5.1.0"
     - nodejs_version: "6.4.0"
     - nodejs_version: "7.10.0"
+    - nodejs_version: "8.1.2"
 
 install:
   - ps: Install-Product node $env:nodejs_version
