--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "http://tomasz.janczuk.org",
     "twitter": "tjanczuk"
   },
-  "version": "8.2.2",
+  "version": "8.2.3",
   "description": "Edge.js: run .NET and Node.js in-process on Windows, Mac OS, and Linux",
   "tags": [
     "owin",
@@ -22,12 +22,7 @@
   "engines": {
     "node": ">= 6"
   },
-  "licenses": [
-    {
-      "type": "Apache",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0"
-    }
-  ],
+  "license": "Apache-2.0",
   "dependencies": {
     "edge-cs": "1.2.1",
     "nan": "^2.6.1"
