--- a/lib/bootstrap/bootstrap.csproj
+++ b/lib/bootstrap/bootstrap.csproj
@@ -1,17 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <TargetFrameworks>netcoreapp1.0;netcoreapp1.1;netcoreapp2.0;</TargetFrameworks>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>bootstrap</AssemblyName>
     <PackageId>bootstrap</PackageId>
-    <PackageTargetFallback>$(PackageTargetFallback);portable-net45+wp80+win8+wpa81+dnxcore50;portable-dnxcore50+net45+win8+wp8+wpa81</PackageTargetFallback>
-    <RuntimeFrameworkVersion>1.0.5</RuntimeFrameworkVersion>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.0' ">
     <ProjectReference Include="..\..\src\double\Edge.js\Edge.js.csproj" />
     <PackageReference Include="Edge.js.CSharp" Version="1.2.0" />
   </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">
+      <ProjectReference Include="..\..\src\double\Edge.js\Edge.js.csproj" />
+      <PackageReference Include="Edge.js.CSharp" Version="1.2.0" />
+    </ItemGroup>
+
+    <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.0' ">
+        <ProjectReference Include="..\..\src\double\Edge.js\Edge.js.csproj" />
+        <PackageReference Include="Edge.js.CSharp" Version="1.2.0" />
+      </ItemGroup>
 
 </Project>
