--- a/src/double/Edge.js/Edge.js.csproj
+++ b/src/double/Edge.js/Edge.js.csproj
@@ -50,22 +50,24 @@
     <ItemGroup Condition=" '$(TargetFramework)' != 'net45' ">
       <PackageReference Include="System.Console" Version="4.3.0" />
       <PackageReference Include="System.Runtime" Version="4.3.0" />
+      <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
       <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
       <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
       <PackageReference Include="System.Linq" Version="4.3.0" />
       <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
       <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
-      <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
       <PackageReference Include="Microsoft.CSharp" Version="4.3.0" />
+      <PackageReference Include="System.Data.Common" Version="4.3.0" />
       <PackageReference Include="System.Reflection" Version="4.3.0" />
-      <PackageReference Include="System.Xml.XPath.XmlDocument" Version="4.3.0" />
-      <PackageReference Include="System.Xml.ReaderWriter" Version="4.3.0" />
       <PackageReference Include="System.Private.Uri" Version="4.3.0" />
       <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.0.0" />
       <PackageReference Include="Microsoft.DotNet.InternalAbstractions" Version="1.0.0" />
       <PackageReference Include="Microsoft.CodeAnalysis" Version="2.3.2" />
       <PackageReference Include="System.AppContext" Version="4.3.0" />
+      <PackageReference Include="System.Xml.XPath.XmlDocument" Version="4.3.0" />
+      <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
+      <PackageReference Include="System.Xml.ReaderWriter" Version="4.3.0" />
     </ItemGroup>
 
 
