--- a/test/test.csproj
+++ b/test/test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFrameworks>netcoreapp1.1;netcoreapp2.0</TargetFrameworks>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>test</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -12,7 +12,7 @@
     <Compile Remove="double\**\*.cs;hello_class.cs" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' OR '$(TargetFramework)' == 'netcoreapp2.0' ">
     <ProjectReference Include="..\src\double\Edge.js\Edge.js.csproj"/>
     <PackageReference Include="Edge.js.CSharp" Version="1.2.0" />
     <PackageReference Include="System.AppContext" Version="4.3.0" />
