--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ image:
 environment:
   matrix:
     # node.js
+    - nodejs_version: "5.9.1"
     - nodejs_version: "6.11.2"
     - nodejs_version: "7.10.1"
     - nodejs_version: "8.2.1"
