--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ environment:
     - nodejs_version: "6.11.5"
     - nodejs_version: "7.10.1"
     - nodejs_version: "8.8.1"
+    - nodejs_version: "9.0.0"
 
 install:
   - ps: Install-Product node $env:nodejs_version
