testing mono dictionary fix

--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,13 @@ Sample105.*
 
 adhoc/
 
+*cmake*
+
 package/
 tools/build
 /src/double/Edge.js/obj/
 /src/double/Edge.js/bin/
+/src/Debug/
 /test/obj/
 /test/bin/
+
