--- a/tools/nuget/edge.nuspec
+++ b/tools/nuget/edge.nuspec
@@ -2,13 +2,14 @@
 <package >
   <metadata>
     <id>EdgeJs</id>
-    <version>9.3.1</version>
+    <version>9.3.2</version>
     <authors>Antonas Graciovas</authors>
     <owners>Antonas Graciovas</owners>
     <licenseUrl>https://raw.githubusercontent.com/agracio/edge-js/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/agracio/edge-js</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <summary>Script Node.js in a .NET application.</summary>
+    <title>Run .NET and Node.js code in-process on Windows, macOS, and Linux</title>
+    <summary>Run .NET and Node.js code in-process on Windows, macOS, and Linux</summary>
     <description>With Edge.js you can script Node.js in a .NET application. Edge.js allows you to run Node.js and .NET code in one process. You can call Node.js functions from .NET and .NET functions from Node.js. Edge.js takes care of marshalling data between CLR and V8. Edge.js also reconciles threading models of single threaded V8 and multi-threaded CLR. Edge.js ensures correct lifetime of objects on V8 and CLR heaps. This Edge.js NuGet package supports scripting Node.js v8.9.3.</description>
     <copyright>Copyright 2017 Tomasz Janczuk</copyright>
     <tags>node.js node .net edge edge.js v8 clr coreclr mono interop javascript</tags>
