--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,14 +18,13 @@ test_script:
   - dotnet --version
   - npm test
   - node tools/coverage.js
-  - SET EDGE_USE_CORECLR=1 & npm test
-  - SET EDGE_USE_CORECLR=1 & node tools/coverage.js
+  # - SET EDGE_USE_CORECLR=1 & npm test
+  # - SET EDGE_USE_CORECLR=1 & node tools/coverage.js
 
 after_test:
   - ps: |
       $url = "https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)"
       $file = '.\test-results.xml'
       (New-Object 'System.Net.WebClient').UploadFile($url, (Resolve-Path '.\test-results-net.xml'))
-      (New-Object 'System.Net.WebClient').UploadFile($url, (Resolve-Path '.\test-results-coreclr.xml'))
 
 build: off
