updating appveyor confog

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,6 @@
 image:
 - Visual Studio 2015
 
-platform:
-  - x64
-
 environment:
   matrix:
     # node.js
@@ -13,7 +10,7 @@ environment:
     - nodejs_version: "9.3.0"
 
 install:
-  - ps: Install-Product node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version x64
   - npm install
 
 test_script:
