--- a/.gitignore
+++ b/.gitignore
@@ -50,9 +50,15 @@ adhoc/
 
 package/
 tools/build
+
 /src/double/Edge.js/obj/
 /src/double/Edge.js/bin/
+/src/double/Edge.js.CSharp/obj/
+/src/double/Edge.js.CSharp/bin/
+/src/double/Edge.js/*.sln
+/src/double/Edge.js.CSharp/*.sln
 /src/Debug/
+
 /test/obj/
 /test/bin/
 /test/Properties/
