--- a/src/double/Edge.js.CSharp/Edge.js.CSharp.csproj
+++ b/src/double/Edge.js.CSharp/Edge.js.CSharp.csproj
@@ -3,13 +3,13 @@
     <Description>Edge.js enables scripting CLR languages from Node.js. This package is a dependency of Edge.js and supports scripting C# from Node.</Description>
     <AssemblyTitle>C# compiler for Edge.js</AssemblyTitle>
     <VersionPrefix>1.2.0</VersionPrefix>
-    <TargetFrameworks>netcoreapp1.1;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>Edge.js.CSharp</AssemblyName>
     <PackageId>Edge.js.CSharp</PackageId>
     <PackageProjectUrl>https://github.com/tjanczuk/edge</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/tjanczuk/edge-cs/blob/master/LICENSE.txt</PackageLicenseUrl>
   </PropertyGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' OR '$(TargetFramework)' == 'netcoreapp2.0' ">
+  <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="2.8.0" />
   </ItemGroup>
