--- a/.travis.yml
+++ b/.travis.yml
@@ -16,19 +16,19 @@ node_js:
 
 install:
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF ; fi
- - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt install apt-transport-https ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt -qq install apt-transport-https ; fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "deb https://download.mono-project.com/repo/ubuntu stable-xenial main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list ; fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb ; fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo dpkg -i packages-microsoft-prod.deb ; fi
- - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt update ; fi
- - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt install mono-devel ; fi
- - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt install dotnet-sdk-2.1 ; fi
- - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt -qq update ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt -qq install mono-devel ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt -qq install dotnet-sdk-2.1 ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update >/dev/null ; fi
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install glib mono openssl ; fi
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then curl -sSL -k -o osx-net-core.pkg https://download.visualstudio.microsoft.com/download/pr/59a7b78f-4e86-473b-b230-c84d15505cec/766e3e5f35e7bb9677dd785071c5fbf7/dotnet-sdk-2.1.500-osx-x64.pkg ; fi
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo installer -verboseR -pkg osx-net-core.pkg -target / ; fi
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PATH=/usr/local/share/dotnet:$PATH ; fi
- - npm install
+ - npm install -q
 
 script:
  - mono --version
