updating appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,8 @@ environment:
     - nodejs_version: "11.3.0"
 
 init:
-  - cmd: powershell >-
-      $app = Get-WmiObject -Class Win32_Product -Filter \"Vendor = 'Node.js Foundation'\"
+  - ps >-
+      $app = Get-WmiObject -Class Win32_Product -Filter "Vendor = 'Node.js Foundation'"
       Write-Host $app
       if ($app) {
         $app.Uninstall()
